--- a/Hugging_face_demo.ipynb
+++ b/Hugging_face_demo.ipynb
@@ -2,29 +2,33 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
+      ],
+      "metadata": {
+        "id": "JMnQ1tW4AHve"
+      },
+      "id": "JMnQ1tW4AHve",
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
       "id": "bbe8d915",
       "metadata": {
-        "id": "bbe8d915",
-        "outputId": "d25e52a9-9f5b-4c8f-a273-491da8fc3a27",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bbe8d915",
+        "outputId": "d16b5f02-398a-487b-871a-28f6cd24bcea"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/transformers/generation/utils.py:1178: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[{'generated_text': 'a black dog laying on top of a wooden floor'}]\n",
             "text: a black dog laying on top of a wooden floor\n"
           ]
         },
@@ -39,11 +43,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "story: a black dog laying on top of a wooden floor. I knew I knew nothing: I was on to something. I was not a man. That was too much to bear—a fact I was almost certainly correct about a whole lot of people.\n",
-            "\n",
-            "The day of my trial, the world was silent. I left and a friend called me back to tell me I am guilty.\n",
-            "\n",
-            "The week immediately after my guilty plea was announced,\n"
+            "story: a black dog laying on top of a wooden floor. A huge pit bull dog sat directly on top of the pit bull at the side of the building. The pit bulls were constantly harassed, threatened and threatened, but the only thing you could do was say \"stop\" and the police would arrive; there would be no arrest, no summons for animal control, nothing to stop the dogs. Finally the pit bull was shot, but the police tried to\n"
           ]
         }
       ],
@@ -63,8 +63,6 @@
         "\n",
         "\n",
         "    text = image_to_text(url) # url of the image file\n",
-        "\n",
-        "    print(text)\n",
         "\n",
         "    return text\n",
         "\n",
