--- a/Monthly_huddle.ipynb
+++ b/Monthly_huddle.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "d23dbd47",
       "metadata": {
         "id": "d23dbd47"
@@ -20,7 +20,7 @@
         "There will be 3 components of the app:\n",
         "\n",
         "\n",
-        "1.   Image to text model: To cretae a text from the uploaded photo\n",
+        "1.   Image to text model: To create a text from the uploaded photo\n",
         "2.   Text generation model:  to generate a short story\n",
         "3.   Text to speech model: To generate a audio story\n",
         "\n"
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 23,
       "id": "8ad6339f",
       "metadata": {
         "id": "8ad6339f"
@@ -40,19 +40,31 @@
       "outputs": [],
       "source": [
         "# 1- Image 2 text : The model for the machine to understand what is the scenario based on a photo.\n",
+        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# 2- Large Language Model : To cretae a short story based on the scenarion from previous model"
+        "# 2- Text Generation Model : To create a short story based on the scenarion from previous model\n",
+        "\n"
       ],
       "metadata": {
         "id": "MzE8HK5Vomyu"
       },
       "id": "MzE8HK5Vomyu",
-      "execution_count": null,
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "k3uvhk0SsdIG"
+      },
+      "id": "k3uvhk0SsdIG",
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -69,7 +81,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [],
+      "metadata": {
+        "id": "ues1M7s4-wM4"
+      },
+      "id": "ues1M7s4-wM4",
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "id": "d31bcc7e",
       "metadata": {
         "id": "d31bcc7e"
@@ -85,37 +107,6 @@
         "id": "89ebac68"
       },
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "5387ed90",
-      "metadata": {
-        "id": "5387ed90",
-        "outputId": "fa192b4e-20b0-4743-d09f-d606c57576e9"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "(113385, 11)\n",
-            "(113385, 11)\n",
-            "(113385, 3)\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "(26292, 3)"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": []
     }
   ],
