--- a/test_colab.ipynb
+++ b/test_colab.ipynb
@@ -1,12 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7e5cb26",
+   "cell_type": "markdown",
+   "id": "1468c5fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This is a colab testing Notebook..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "890e0107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 31\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
